--- a/index.html
+++ b/index.html
@@ -749,6 +749,7 @@ Note: Colors can be customized for bulk orders of 2,000+ unit</p>
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
+                <p>+91 7652043878</p>
                 <p>+91 8447500438</p>
               </div>
             </div><!-- End Info Item -->
@@ -757,7 +758,7 @@ Note: Colors can be customized for bulk orders of 2,000+ unit</p>
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>harshita@prosoc.co.in</p>
               </div>
             </div><!-- End Info Item -->
 
