--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   <!-- =======================================================
   * Template Name: Prosoc
   * Template URL: 
-  * Updated: Aug 15 07 2025 with Bootstrap v5.3.3
-  * Author: PRiyam Trivedi
+  * Updated: 15 july 2025 with Bootstrap v5.3.3
+  * Author: Priyam Trivedi
   ======================================================== -->
 
 </head>
@@ -143,7 +143,7 @@
       current.classList.remove('active');
 
       [current, next] = [next, current];
-    }, 3000);
+    }, 4000);
   </script>
        <div class="container" style="margin-top: -60px;"> <!-- move text up -->
   <div class="row justify-content-center" data-aos="zoom-out">
