--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@ Note: Colors can be customized for bulk orders of 2,000+ unit</p>
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Prosoc</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
        
-        Designed by <a href="">Priyam Trivedi</a>
+        Designed by <a href="https://www.linkedin.com/in/priyam-trivedi-b02846210/">Priyam Trivedi</a>
       </div>
     </div>
 
